--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 4201",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "angularx-qrcode": "^1.5.3",
     "core-js": "^2.5.4",
+    "qrcode": "^1.3.3",
+    "qrcode-reader": "^1.0.4",
     "qrcodejs": "^1.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
